# tariff-intelligence-agent-demo

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  cancellation.py  config.py  excel_io.py  ingestion.py  jobs.py  llm.py  main.py  pipeline.py  reporting.py  review_store.py  schemas.py  tools.py  vectorstore.py
app/connectors/: __init__.py  base.py  mock_confluence.py  mock_inbox.py  mock_wiki.py  router.py
data/input/: tariff_packs.xlsx
data/knowledge_base/: confluence_tariff_updates.md  email_updates.md  internal_wiki_pack_rules.md  revenue_assurance_policy.md
data/mock_sources/: confluence_pages.json  inbox_emails.json  source_metadata.json  wiki_pages.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ActiveRunPanel.tsx  AnalysisOverlay.tsx  AppSidebar.tsx  AuditLog.tsx  DownloadsPanel.tsx  EvidenceCard.tsx  Header.tsx  MetricsCards.tsx  ProposalDetailPanel.tsx  ProposalsBoard.tsx  RecordsTable.tsx  RunHistory.tsx  SettingsPanel.tsx  SourceDocumentDetail.tsx  SourceSearch.tsx  SourcesOfTruth.tsx  WorkflowStepper.tsx
tests/: test_connectors.py  test_pipeline.py  test_schemas.py  test_tools.py
ui/: streamlit_app.py
