[project]
name = "tariff-intelligence-agent-demo"
version = "0.1.0"
description = "Synthetic telecom tariff intelligence agent demo with Excel, RAG, Gemini, FastAPI, and Streamlit."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
